--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,7 @@
 @import 'global.scss';
+@import 'customer.scss';
 @import 'pages.scss';
-@import 'coins.css';
+@import 'coins.scss';
+@import 'layer.scss';
 @import 'slick.scss';
-@import '../css/sprite.css';
+@import 'sprite.scss';
