--- a/src/sass/pages.scss
+++ b/src/sass/pages.scss
@@ -1,10 +1,3 @@
-/*!
- * FIFACOIN.COM
- * v1.0
- * pages.css
- *  * 2017-03-23
- */
-
 .sponsorship {
 	padding-bottom: 35px;
 }
@@ -2563,6 +2556,10 @@ table {
 			}
 		}
 	}
+	&.con {
+		min-width: auto;
+		margin: 20px 0;
+	}
 }
 
 .shop-filter {
@@ -2604,7 +2601,7 @@ table {
 					border-right: 4px solid transparent;
 					top: 6px;
 					&.current {
-						border-color: #1cb94b;
+						border-top-color: #1cb94b;
 					}
 				}
 			}
@@ -2674,6 +2671,226 @@ table {
 			&:hover {
 				background-color: #5c02db;
 			}
+		}
+	}
+}
+
+.shop-good-show {
+	height: 340px;
+	background: #fff;
+	.good-show-l {
+		padding-top: 80px;
+		padding-left: 185px;
+		float: left;
+		width: 720px;
+	}
+	.good-show-r {
+		float: left;
+		padding-top: 48px;
+		padding-right: 32px;
+		width: 480px;
+		.good-show-r-t {
+			padding-bottom: 25px;
+			.good-name {
+				font-size: 22px;
+				color: #333;
+				display: block;
+			}
+			.good-value-range {
+				font-size: 22px;
+				color: #6909f1;
+			}
+		}
+		.good-show-r-b {
+			padding-top: 30px;
+			border-top: 1px solid #e7e7e7;
+			.group {
+				margin-bottom: 22px;
+				font-size: 14px;
+				line-height: 25px;
+				.group-label {
+					color: #999;
+					margin-right: 10px;
+				}
+				.radio-group {
+					.btn {
+						padding: 0;
+						height: 25px;
+						min-width: 60px;
+						line-height: 25px;
+					}
+				}
+				.amount {
+					color: #333;
+					font-size: 14px;
+				}
+			}
+			.btn-redeem {
+				font-size: 18px;
+				color: #fff;
+				background: #6909f1;
+				height: 40px;
+				min-width: 180px;
+				&:hover {
+					background: #5c02db;
+				}
+			}
+		}
+	}
+}
+
+.shop-sidebar {
+	width: 240px;
+	background: #fff;
+	padding: 25px 10px;
+	color: #333;
+	.shop-sidebar-title {
+		font-size: 18px;
+		color: #333;
+		line-height: 1;
+	}
+	.sidebar-item {
+		margin-top: 22px;
+		.sidebar-item-l {
+			width: 88px;
+			float: left;
+		}
+		.sidebar-item-r {
+			float: left;
+			width: 132px;
+			line-height: 1;
+			font-size: 14px;
+			padding-left: 10px;
+			color: #333;
+			> span {
+				margin-bottom: 6px;
+				display: inline-block;
+			}
+			.status {
+				display: inline-block;
+				background: #e4e4e4;
+				color: #666;
+				height: 18px;
+				line-height: 18px;
+				padding: 0 5px;
+				font-size: 12px;
+				margin-left: 5px;
+
+				&.active {
+					background: #1cb94b;
+					color: #fff;
+				}
+			}
+		}
+	}
+}
+
+.shop-good-profile {
+	width: 940px;
+	min-height: 412px;
+	background-color: #fff;
+	margin-left: 20px;
+	padding: 0 20px;
+
+	.nav-tabs {
+		border-bottom: 1px solid #e7e7e7;
+	}
+
+	.nav-tabs>li>a {
+		color: #333;
+		font-size: 18px;
+		border-radius: 0;
+		padding: 16px 15px;
+	}
+
+	.nav-tabs>li.active>a,
+	.nav-tabs>li.active>a:focus,
+	.nav-tabs>li.active>a:hover {
+		color: #6909f1;
+		cursor: default;
+		background-color: #fff;
+		border: 0;
+		border-bottom: 2px solid #6909f1;
+		border-bottom-color: #6909f1;
+	}
+}
+
+.rules-modal {
+	.modal-dialog {
+		margin: 10% auto;
+	}
+}
+
+.gift-card {
+	width: 410px;
+	height: 250px;
+	padding: 0 20px;
+	display: none;
+
+	&.amazon {
+		 background: url(../images/shop/amazon.png) no-repeat;
+	}
+
+	.card-info {
+		color: #fff;
+		padding-top: 155px;
+		.card-num {
+			margin-bottom: 8px;
+		}
+		.label {
+			display: inline-block;
+			font-size: 14px;
+			font-weight: normal;
+			vertical-align: middle;
+			padding: 0;
+			width: 90px;
+			text-align: left;
+		}
+		.value {
+			display: inline-block;
+			font-size: 20px;
+			vertical-align: middle;
+		}
+		.copy {
+			width: 50px;
+			height: 22px;
+			font-size: 14px;
+			border: 1px solid #fff;
+			border-radius: 3px;
+			color: #fff;
+			text-align: center;
+			line-height: 1.2;
+			vertical-align: middle;
+			float: right;
+		}
+	}
+
+	&.theme-black {
+		.card-info {
+			color: #333;
+			.label {
+				color: #333;
+			}
+			.copy {
+				color: #333;
+				border-color: #d3d3d3;
+			}
+		}
+	}	
+}
+
+.layui-layer.layer-gift-card {
+	background: transparent;
+	.layui-layer-ico {
+		background: none;
+		right: -58px;
+		top: -22px;
+		
+		&::before {
+			content: "\2715";
+			font-size: 26px;
+			color: #fff;
+			opacity: 0.6;
 		}
 	}
 }
